# Cosmo-llm

./: .gitignore  data.ipynb  main.py  pyproject.toml
notebook/: notebook.ipynb
src/: __init__.py
