[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torch>=2.12.0",
]
